# product-catalog-ml-challenge

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHALLENGE.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  docker-compose.yml  prompts.md  pyproject.toml  run.md
.github/workflows/: ci.yml  cicd.yml
data/: products.csv
docs/: conf.py  index.rst
src/: manage.py
src/adapters/: repository.py
src/catalog/: __init__.py  admin.py  apps.py  tests.py  views.py
src/catalog/domain/: models.py
src/catalog/migrations/: __init__.py
src/domain/: model.py
src/entrypoints/: fastapi_app.py  schemas.py
src/mercadolibre_api/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/service_layer/: csv_uow.py  services.py  unit_of_work.py
tests/: fake_repository.py  test_e2e.py  test_repository.py  test_services.py
tests/features/: authorization.feature  product_details.feature  product_listing.feature  product_management.feature  product_modification.feature  product_retrieval.feature
