[project]
name = "product-info-backend"
version = "0.1.0"
description = "A backend service for managing product information."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "mypy>=1.17.1",
    "django-stubs>=5.2.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs>=3.16.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.10",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]


[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "N", "D"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "mercadolibre_api.settings"
