[project]
name = "product-info-backend"
version = "0.1.0"
description = "A backend service for managing product information."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "sphinx-autobuild>=2025.8.25",
]
